--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "patchpack",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Json patch serializer",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/*.js",
+    "dist",
     "browser"
   ],
   "browser": {
